--- a/apiflutter/pubspec.yaml
+++ b/apiflutter/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/images/socrates.jpg
     - assets/images/sim.png
+    - assets/images/pensador.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
